syntax="proto3";

package v1;
option go_package = ".;llo";

message LLOOffchainConfigProto {
    uint32 protocolVersion = 1;
    uint64 defaultMinReportIntervalNanoseconds = 2;
    bool enableObservationCompression = 3;
}
